--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
   "name": "pimgen",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Image Generator Module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release --branches main"
   },
   "keywords": [
     "image",
     "generator"
   ],
   "author": "Pedro Vanzo",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pedrovanzo/pimgen.git"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
+    "semantic-release": "^24.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
